--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ img {
 #nav {
     margin-top:10px;
     display:inline-block; 
-    width: 90%;
+    width: 100%;
     height: 40px;
     padding-top: 10px;
     text-align: center;
@@ -200,14 +200,18 @@ opRight {
     font-size: 1em;
 }
 #instructions {
-    margin-top:10px;
+    margin:auto;
     display:inline-block; 
-    width: 50%;
-    height: 50px;
+    width: 100%;
+    height: 60px;
     padding-top: 10px;
     text-align: center;
     border-radius: 20px;
     color: #646464;
     border:1px dashed #646464;
     font-size: 1em; 
+}
+.disable-button {
+    opacity: 0.5;
+    background-color: #B5FFFE;
 }
